# utility-scripts

./: .gitignore  README.md
fccanalyse/: fccanalyse.py
g2ir/: g2ir.py
gauss_viban/: Makefile
gauss_viban/data/: fc_data  pos_data
gauss_viban/modules/: miquel_routines.mod
gauss_viban/source/: gauss_viban.f90  routines.f90
mctdh_spec_fft/: mctdh_spec_fft.f90  mctdh_spec_fft.m
mctdh_specinput/: CMakeLists.txt
mctdh_specinput/source/: CMakeLists.txt  constants.h  mctdh_specinput.cpp
progs/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1
progs/source/: CMakeLists.txt  GaussFchk.cpp  GaussFchk.h  anharmgaussjob.cpp  constants.h  convolute.cpp  findmin.cpp  gau2fcc.cpp  gauss_viban.cpp  gva2.cpp  mctdh_fft.cpp  mctdh_spec_fft.f90  mctdh_specinput.cpp  mctdh_specpara.f90  mkdusch.cpp  mkduschclass.cpp  mkduschclass.h  mkivrcalc.cpp  test_cubic.cpp  utilities.cpp  utilities.h  vertpes.cpp  vibrationalanalysis.cpp  vibrationalanalysis.h
scripts/: analgpop.sh  analnatpop.py  avg_corr.py  avg_ener.py  boltzmann.py  calcspec.py  diagdusch.py  enerexpect.py  fccanalyse.py  genviper.py  get_eners.py  get_structures.py  get_transdip.py  get_tripleteners.py  ivr_crosscorr.py  printdusch.py  ranpsi.py  therm_crosscorr.py
specdiff/: specdiff.m
vim-syntax-files/ftdetect/: gaussian.vim  mctdh.vim
vim-syntax-files/ftplugin/: gaussian.vim
vim-syntax-files/syntax/: com.vim  gauss.vim  gausscom.vim  gausslog.vim  mctdh.vim
